# e-referrals-service-patient-care-api

./: .editorconfig  .flake8  .gitignore  Makefile  README.md  dummy_file.txt  ecs-proxies-containers.yml  ecs-proxies-deploy.yml  manifest_template.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  redocly.yaml
.github/: CODEOWNERS
.github/workflows/: combine-prs.yml  continuous-integration.yml  pr-lint.yaml
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
azure/templates/: ers-integration-tests.yml  ers-smoke.yml  run-tests.yml
macros/: manifest_macros.yml
proxies/live/apiproxy/: proxy.xml
proxies/live/apiproxy/policies/: AssignMessage.AddBaseUrlHeader.xml  AssignMessage.Errors.CatchAllMessage.xml  AssignMessage.Errors.CatchAllTarget.xml  AssignMessage.OAuthPolicyErrorResponse.xml  AssignMessage.RatelimitResponse.xml  AssignMessage.Remove.x-request-id-header.xml  AssignMessage.RemoveAndAddAccessTokenHeader.xml  AssignMessage.RemoveAndAddApplicationIdHeader.xml  AssignMessage.RemoveAndAddNhsNumberHeader.xml  AssignMessage.SetEchoTarget.xml  AssignMessage.SetEchoTruststore.xml  AssignMessage.SetStatusResponse.xml  AssignMessage.SetTargetIdentifierDecoded.xml  AssignMessage.SetTruststore.xml  AssignMessage.Swap.CorrelationHeader.xml  AssignMessage.Swap.TransactionID.xml  FlowCallout.ApplyRateLimiting.xml  Javascript.ValidateTarget.xml  Javascript.ValidateVectorOfTrust.xml  OAuthV2.VerifyAccessToken.xml  Python.DecodeBase64TargetIdentifier.xml  Quota.General.xml  Quota.Referrals.xml  RaiseFault.401Unauthorized.xml  RaiseFault.InvalidTargetIdentifier.xml  RaiseFault.UnsupportedVectorOfTrust.xml  ResponseCache.HealthcareServiceCache.xml  ServiceCallout.CallHealthcheckEndpoint.xml  SpikeArrest.General.xml  SpikeArrest.Referrals.xml  javascript.SetCurrentTimestamp.xml  javascript.SetNhsNumber.xml  javascript.SetStatusResponse.xml
proxies/sandbox/apiproxy/: proxy.xml
sandbox/: .mocharc.yml  Dockerfile  Makefile  app.js  app.spec.js  handlers.js  index.js  package-lock.json  package.json
sandbox/src/mocks/: OperationOutcome.json
scripts/: api-gateway-integration.py  check_python_licenses.sh  populate_placeholders.py  rhel_clean_environment.sh  rhel_setup_environment.sh  ubuntu_setup_environment.sh  validate_oas_examples.py
specification/: e-referrals-service-patient-care-api.yaml
specification/components/schemas/: Appointment.yaml  HealthcareParticipant.yaml  HealthcareService.yaml  OperationOutcome.yaml  PatientParticipant.yaml  PractitionerRole.yaml  ServiceRequest.yaml  ServiceRequestBundle.yaml  Task.yaml
tests/: api_tests.py  conftest.py  data.py  test_endpoints.py  utils.py
tests/configuration/: config.py  environment.py
tests/integration/: test_end_to_end.py  test_headers.py  test_user_authentication.py
(+51 files in other folders)
