[project]
python = "^3.8"

[tool.poetry]
name = "e-referrals-service-patient-care-api"
version = "0.0.1-alpha"
description = "TODO"
authors = [
    #TODO add authors
]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/e-referrals-service-patient-care-api"
keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords


[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0.2"
gitpython = "^3.1.43"
lxml = "^4.9.4"
xmlformatter = "^0.2.8"
pytest-check = "^2.4.1"
requests = "^2.32.3"
openapi-core = "^0.19.4"
pytest-nhsd-apim = "^3.4.3"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"
black = "^24.8"
pip-licenses = "^5.0.0"
jinja2 = "^3.1.4"
pytest = "^8.3.4"
coverage = "^7.6"
aiohttp = "^3.11.10"
pytest-asyncio = "^0.25.0"
pytest-nhsd-apim = "^3.4.3"

[tool.poetry.scripts]
