[project]
python = "^3.8"
name = "e-referrals-service-patient-care-api"
version = "0.0.1-alpha"
description = "TODO"
authors = [
    #TODO add authors
]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/e-referrals-service-patient-care-api"
keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords
dynamic = ["dependencies", "requires-python"]


[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0.4"
gitpython = "^3.1.44"
lxml = "^4.9.4"
xmlformatter = "^0.2.8"
pytest-check = "^2.5.3"
requests = "^2.32.4"
openapi-core = "^0.19.5"
pytest-nhsd-apim = "^4.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1"
pip-licenses = "^5.0.0"
jinja2 = "^3.1.6"
pytest = "^8.4.1"
coverage = "^7.10"
aiohttp = "^3.12.15"
pytest-asyncio = "^1.1.0"
pytest-nhsd-apim = "^4.0.1"

[tool.poetry.scripts]
